ldView ng-repeat error correction

--- a/client/views/partials/ldView.html
+++ b/client/views/partials/ldView.html
@@ -389,12 +389,12 @@
                                            <p class="tabText"><i class="icon-calendar"></i> Created in: <span
                                                    class="nodeBodyText"> CREATION DATE </span></p>
                                            <p class="tabText"><i class="icon-map-marker"></i> Topics: <span
-                                                   class="nodeBodyText" ng-repeat=""> NG REPEAT FOR TOPICS</span></p>
+                                                   class="nodeBodyText" > NG REPEAT FOR TOPICS</span></p>
                                            <p class="tabText"><i class="icon-tasks"></i> Objectives: <span
-                                                   class="nodeBodyText" ng-repeat=""> NG REPEAT FOR OBJECTIVES</span>
+                                                   class="nodeBodyText" > NG REPEAT FOR OBJECTIVES</span>
                                            </p>
                                            <p class="tabText"><i class="icon-backward"></i> Pre-Requisites: <span
-                                                   class="nodeBodyText" ng-repeat=""> NG REPEAT FOR REQUISITES</span>
+                                                   class="nodeBodyText" > NG REPEAT FOR REQUISITES</span>
                                            </p>
                                            <p class="tabText"><i class="icon-user"></i> Students' Description: <span
                                                    class="nodeBodyText"> STUDENT DESCRIPTION TEXT</span></p>
@@ -459,12 +459,12 @@
                                            <p class="tabText"><i class="icon-calendar"></i> Created in: <span
                                                    class="nodeBodyText"> CREATION DATE </span></p>
                                            <p class="tabText"><i class="icon-map-marker"></i> Topics: <span
-                                                   class="nodeBodyText" ng-repeat=""> NG REPEAT FOR TOPICS</span></p>
+                                                   class="nodeBodyText" > NG REPEAT FOR TOPICS</span></p>
                                            <p class="tabText"><i class="icon-tasks"></i> Objectives: <span
-                                                   class="nodeBodyText" ng-repeat=""> NG REPEAT FOR OBJECTIVES</span>
+                                                   class="nodeBodyText" > NG REPEAT FOR OBJECTIVES</span>
                                            </p>
                                            <p class="tabText"><i class="icon-backward"></i> Pre-Requisites: <span
-                                                   class="nodeBodyText" ng-repeat=""> NG REPEAT FOR REQUISITES</span>
+                                                   class="nodeBodyText" > NG REPEAT FOR REQUISITES</span>
                                            </p>
                                            <p class="tabText"><i class="icon-user"></i> Students' Description: <span
                                                    class="nodeBodyText"> STUDENT DESCRIPTION TEXT</span></p>
@@ -561,12 +561,12 @@
                                            <p class="tabText"><i class="icon-calendar"></i> Created in: <span
                                                    class="nodeBodyText"> CREATION DATE </span></p>
                                            <p class="tabText"><i class="icon-map-marker"></i> Topics: <span
-                                                   class="nodeBodyText" ng-repeat=""> NG REPEAT FOR TOPICS</span></p>
+                                                   class="nodeBodyText" > NG REPEAT FOR TOPICS</span></p>
                                            <p class="tabText"><i class="icon-tasks"></i> Objectives: <span
-                                                   class="nodeBodyText" ng-repeat=""> NG REPEAT FOR OBJECTIVES</span>
+                                                   class="nodeBodyText" > NG REPEAT FOR OBJECTIVES</span>
                                            </p>
                                            <p class="tabText"><i class="icon-backward"></i> Pre-Requisites: <span
-                                                   class="nodeBodyText" ng-repeat=""> NG REPEAT FOR REQUISITES</span>
+                                                   class="nodeBodyText" > NG REPEAT FOR REQUISITES</span>
                                            </p>
                                            <p class="tabText"><i class="icon-user"></i> Students' Description: <span
                                                    class="nodeBodyText"> STUDENT DESCRIPTION TEXT</span></p>
@@ -630,12 +630,12 @@
                                            <p class="tabText"><i class="icon-calendar"></i> Created in: <span
                                                    class="nodeBodyText"> CREATION DATE </span></p>
                                            <p class="tabText"><i class="icon-map-marker"></i> Topics: <span
-                                                   class="nodeBodyText" ng-repeat=""> NG REPEAT FOR TOPICS</span></p>
+                                                   class="nodeBodyText" > NG REPEAT FOR TOPICS</span></p>
                                            <p class="tabText"><i class="icon-tasks"></i> Objectives: <span
-                                                   class="nodeBodyText" ng-repeat=""> NG REPEAT FOR OBJECTIVES</span>
+                                                   class="nodeBodyText" > NG REPEAT FOR OBJECTIVES</span>
                                            </p>
                                            <p class="tabText"><i class="icon-backward"></i> Pre-Requisites: <span
-                                                   class="nodeBodyText" ng-repeat=""> NG REPEAT FOR REQUISITES</span>
+                                                   class="nodeBodyText" > NG REPEAT FOR REQUISITES</span>
                                            </p>
                                            <p class="tabText"><i class="icon-user"></i> Students' Description: <span
                                                    class="nodeBodyText"> STUDENT DESCRIPTION TEXT</span></p>
